2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02506]
	* anchor.c (putHmarker): remove #ifdef __CYGWIN__ for bzero()
	* matrix.h (m_copy): ditto
	* table.c (pushTable): ditto

2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02505]
	* configure (alarm): check alarm if USE_ALARM

2001-11-22  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02501]
	* .cvsignore: add funcname.c funcname1.h funcname2.h tagtable.c
	* scripts/.cvsignore: added, dirlist.cgi
	* scripts/multipart/.cvsignore: added, multipart.cgi
	* scripts/w3mman/.cvsignore: added, w3mman w3mman2html.cgi
	* doc-jp/README.kokb: deleted
	* gc/makefile.depend: deleted

2001-11-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* table.c (feed_table): fix the following table
	  <table border=1><tr><td>&lt &lt;</table>

2001-11-22  WATANABE Katsuyuki <katsuyuki_1.watanabe@toppan.co.jp>

	* [w3m-dev 02497] 
	* url.c (parseURL2): fix #ifdef __EMX__ code
	* indep.c (cleanupName): remove #if 0 /* SUPPORT_NETBIOS_SHARE */ code

2001-11-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02494]
	* configure (MIME_TYPES): check if mimetypes is empty
	* configure (label_topline): add missing =
	* configure (nextpage_topline): ditto

2001-11-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02493]
	* scripts/multipart/Makefile: s/DISTDIR/DESTDIR/

2001-11-21  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02481]
	* s/BG_COLOR/USE_BG_COLOR/
	* s/ANSI_COLOR/USE_ANSI_COLOR/
	* s/COLOR/USE_COLOR/
	* s/MENU/USE_MENU/
	* s/MOUSE/USE_MOUSE/

	* [w3m-dev 02480] new configure
	* config.h.dist: updated
	* configure: $def_emacs_like_lineedit, $def_vi_prec_num
	   $def_label_topline, $def_nextpage_topline
	   $def_use_mark, $def_use_gopher, $def_use_alarm
	* configure: add --{ssl,gc}-{include,lib}dir, --mimetypes
	* configure: BoehmGC Debian hack
	* XMakefile: add $(OPTS)
	* terms.c: use HAVE_SYS_SELECT_H
	* configure: add sys/select.h detection
	* configure: no_float_h -> float_h